cloudformer_based_on_capture.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpccd6388a8": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "subnet2e67a64b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.0.0/20",
        "AvailabilityZone": "ap-southeast-1a",
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "subnet75698d02": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone": "ap-southeast-1b",
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "igw226a8246": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "webhosting_igw"
          }
        ]
      }
    },
    "acl60b64005": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "rtbf627d793": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "asgLinuxwebservers": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": [
          "ap-southeast-1a"
        ],
        "Cooldown": "300",
        "DesiredCapacity": "1",
        "HealthCheckGracePeriod": "300",
        "HealthCheckType": "ELB",
        "MaxSize": "2",
        "MinSize": "1",
        "VPCZoneIdentifier": [
          {
            "Ref": "subnet2e67a64b"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "lcLinuxWebsrv"
        },
        "TerminationPolicies": [
          "Default"
        ]
      }
    },
    "asgwindowsservers": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": [
          "ap-southeast-1b"
        ],
        "Cooldown": "300",
        "DesiredCapacity": "1",
        "HealthCheckGracePeriod": "300",
        "HealthCheckType": "ELB",
        "MaxSize": "2",
        "MinSize": "1",
        "VPCZoneIdentifier": [
          {
            "Ref": "subnet75698d02"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "lcwindowssrv"
        },
        "TerminationPolicies": [
          "Default"
        ]
      }
    },
    "lcLinuxWebsrv": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "ImageId": "ami-0cbc6aae997c6538a",
        "InstanceType": "t2.micro",
        "KeyName": "yogeshkey",
        "IamInstanceProfile": "EC2",
        "SecurityGroups": [
          {
            "Ref": "sgWebsecuritygroup"
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": {
              "SnapshotId": "snap-0f7db78d7c3057f7f",
              "VolumeSize": 8
            }
          },
          {
            "DeviceName": "/dev/sdb",
            "Ebs": {
              "VolumeSize": 1
            }
          }
        ]
      }
    },
    "lcwindowssrv": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "ImageId": "ami-0f2866fc0244e2798",
        "InstanceType": "t2.micro",
        "KeyName": "yogeshkey",
        "IamInstanceProfile": "EC2",
        "SecurityGroups": [
          {
            "Ref": "sgWebsecuritygroupwin"
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "xvdb",
            "Ebs": {
              "VolumeSize": 1
            }
          },
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "SnapshotId": "snap-00e7761e46807e1c9",
              "VolumeSize": 30
            }
          }
        ]
      }
    },
    "s3ansiblepplaybooksassignment": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "VersioningConfiguration": {
          "Status": "Suspended"
        }
      }
    },
    "sgWebsecuritygroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "launch-wizard-1 created 2020-03-25T21:38:17.196+08:00",
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "sgWebsecuritygroupwin": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "launch-wizard-1 created 2020-03-26T10:26:09.182+08:00",
        "VpcId": {
          "Ref": "vpccd6388a8"
        }
      }
    },
    "scalingScaleGroupSize": {
      "Type": "AWS::AutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyType": "TargetTrackingScaling",
        "StepAdjustments": [

        ],
        "AutoScalingGroupName": {
          "Ref": "asgLinuxwebservers"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl60b64005"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl60b64005"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl60b64005"
        },
        "SubnetId": {
          "Ref": "subnet75698d02"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl60b64005"
        },
        "SubnetId": {
          "Ref": "subnet2e67a64b"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpccd6388a8"
        },
        "InternetGatewayId": {
          "Ref": "igw226a8246"
        }
      }
    },
    "subnetroute1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbf627d793"
        },
        "SubnetId": {
          "Ref": "subnet75698d02"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbf627d793"
        },
        "SubnetId": {
          "Ref": "subnet2e67a64b"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbf627d793"
        },
        "GatewayId": {
          "Ref": "igw226a8246"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpccd6388a8"
        },
        "DhcpOptionsId": "dopt-d3aabbb1"
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "SourceSecurityGroupId": "sg-4375b326",
        "SourceSecurityGroupOwnerId": "871183472234"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroupwin"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroupwin"
        },
        "IpProtocol": "tcp",
        "FromPort": "3389",
        "ToPort": "3389",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroup"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebsecuritygroupwin"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": ""
}
